--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,10 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: "#ECE5D9";
+  height: "100%";
+  width: "100%";
+  min-width: 430;
+  min-height: 700;
+  position: "absolute";
 }
